:green_heart: Add parser testcases

--- a/spec/support/contents/page.html
+++ b/spec/support/contents/page.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="sample title"/>
   <meta property="og:description" content="sample page description"/>
   <meta property="og:url" content="https://example.com/page.html"/>
-  <meta property="og:url" content="https://example.com/image.png"/>
+  <meta property="og:image" content="https://example.com/image.png"/>
   <meta property="og:type" content="article"/>
 
   <meta name="twitter:card" content="summary_large_image"/>
